tests/query_errors/scope_named_scripts2/error.txt
Error: 
    3 |   signed::min
      |   ^^^^^^^^^^^ The constant signed::min (absolute path) is not defined.